# SBI_dMRI

./: .gitignore  README.md  configfile.py  example_1fib.ipynb  pyproject.toml  requirements.txt  requirements_full_lock.txt  sbi_pipeline.py  sbi_pipeline_train_wrapper.py  simulate_data.py  train_snpe.py
inference/: voxelwise.py
models/ball_and_sticks/: export_params.py  factory.py  postprocess.py  simulator.py
priors/: __init__.py  ball_and_sticks.py  base.py
tests/: conftest.py  test_noise_policy.py  test_noise_unit.py  test_pipeline_smoke.py  test_priors_ball_and_sticks.py  test_priors_base.py  test_simulator_ball_and_sticks_unit.py  test_simulator_ball_and_sticks_with_MCMC_priors.py  utils_plotting.py
tools/: get_priors.py  io_compressed.py  io_nifti.py  noise.py  read_params.py
